--- a/CFP.App/Formularios/Financeiros/UserControlCaixa.xaml
+++ b/CFP.App/Formularios/Financeiros/UserControlCaixa.xaml
@@ -137,6 +137,11 @@
                       Foreground="#FF1F3D68"
                       Margin="5 0"/>
             <TabControl Grid.Row="1" Background="LightGray">
+                <TabControl.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem x:Name="MenuItemAtualiza" Header="Atualiza Totais" Click="MenuItemAtualiza_Click"/>
+                    </ContextMenu>
+                </TabControl.ContextMenu>
                 <TabItem x:Name="tabItemCaixa" Header="Caixa">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -182,25 +187,35 @@
                                      AutoGenerateColumns="False" 
                                      Grid.Column="0" 
                                      Background="white"
-                                     Margin="0 0 5 0">
+                                     Margin="0 0 5 0" IsReadOnly="True">
                                     <DataGrid.Columns>
                                         <DataGridTextColumn Header="Forma de Pagamento" Width="200" Binding="{Binding FormaPagamento}" />
                                         <DataGridTextColumn Header="Valor Total" Binding="{Binding Valor, StringFormat='#,##0.00',  ConverterCulture='pt-BR'}" />
                                     </DataGrid.Columns>
+                                    <DataGrid.ContextMenu>
+                                        <ContextMenu>
+                                            <MenuItem x:Name="MenuItemAdicionaEntrada" Header="Nova Entrada Manual" Click="MenuItemAdicionaEntrada_Click"/>
+                                        </ContextMenu>
+                                    </DataGrid.ContextMenu>
                                 </DataGrid>
                                 <DataGrid x:Name="DataGridSaida"
                            AutoGenerateColumns="False" 
                            Grid.Column="1" 
                            Background="White"
-                           Margin="5 0 0 0">
+                           Margin="5 0 0 0" IsReadOnly="True">
                                     <DataGrid.Columns>
                                         <DataGridTextColumn Header="Forma de Pagamento" Width="200" Binding="{Binding FormaPagamento}" />
                                         <DataGridTextColumn Header="Valor Total" Binding="{Binding Valor, StringFormat='#,##0.00',  ConverterCulture='pt-BR'}" />
                                     </DataGrid.Columns>
+                                    <DataGrid.ContextMenu>
+                                        <ContextMenu>
+                                            <MenuItem x:Name="MenuItemAdicionaSaida" Header="Nova Saída Manual" Click="MenuItemAdicionaSaida_Click"/>
+                                        </ContextMenu>
+                                    </DataGrid.ContextMenu>
                                 </DataGrid>
                             </Grid>
                         </Grid>
-                        <Grid Grid.Row="1" Margin="30,26,30,22">
+                        <Grid Grid.Row="1" Margin="30,10,30,30">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="*"/>
@@ -285,7 +300,31 @@
                     </Grid>
                 </TabItem>
                 <TabItem x:Name="tabItemProvisoes" Header="Provisões">
-                    
+                    <Grid Margin="200 10 200 30">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="380"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <DataGrid x:Name="DataGridAReceber" Grid.Row="0" AutoGenerateColumns="False">
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Header="Valor" Binding="{Binding ValorTotal, StringFormat='#,##0.00',  ConverterCulture='pt-BR'}" />
+                                <DataGridTextColumn Header="Pessoa" Binding="{Binding Pessoa}" />
+                                <DataGridTextColumn Header="Data" Binding="{Binding DataGeracao, StringFormat=d,  ConverterCulture='pt-BR'}" />
+                                <DataGridTextColumn Header="Conta" Binding="{Binding Nome}" />
+                               
+                            </DataGrid.Columns>
+                        </DataGrid>
+
+                        <TextBlock x:Name="txtTotalAReceber"
+                                Grid.Row="1"
+                                       Text="TOTAL: R$ 0,00"
+                                       FontFamily="Champagne &amp; Limousines" 
+                                       FontSize="15" 
+                                       Foreground="#FF1F3D68"
+                                       VerticalAlignment="Top"
+                                       HorizontalAlignment="Center"
+                                       Margin="10"/>
+                    </Grid>
                 </TabItem>
             </TabControl>
         </Grid>
