--- a/CFP.App/Formularios/Financeiros/TelasConfirmacoes/ValoresCofre.xaml
+++ b/CFP.App/Formularios/Financeiros/TelasConfirmacoes/ValoresCofre.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="CFP.App.Formularios.Financeiros.TelasConfirmacoes.EntradaSaidaManual"
+﻿<Window x:Class="CFP.App.Formularios.Financeiros.TelasConfirmacoes.ValoresCofre"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,8 +7,8 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         ResizeMode="NoResize"
-        Title="EntradaSaidaManual" 
-        Height="200" Width="350" 
+        Title="ValoresCofre" 
+        Height="250" Width="350" 
         WindowStartupLocation="CenterScreen"
         WindowStyle="None" Loaded="Window_Loaded">
     <Grid >
@@ -30,6 +30,7 @@
                     <RowDefinition/>
                     <RowDefinition/>
                     <RowDefinition/>
+                    <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="220"/>
@@ -37,7 +38,7 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <TextBox
-                  x:Name="txtValorInicial"
+                  x:Name="txtValor"
                   Grid.Column="0" Grid.Row="0"
                   materialDesign:HintAssist.Hint="Digite o valor" 
                   Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
@@ -46,8 +47,6 @@
                   Foreground="#FF1F3D68"
                   VerticalAlignment="Center" 
                   HorizontalAlignment="Stretch" 
-                  PreviewTextInput="txtValorInicial_PreviewTextInput" 
-                  PreviewKeyDown="txtValorInicial_PreviewKeyDown"
                   Margin="20 0 20 0" TabIndex="0"/>
 
                 <Button x:Name="btConfirmar"
@@ -87,9 +86,20 @@
                   Margin="20 0 20 0" TabIndex="1"/>
 
                 <ComboBox 
-                    x:Name="cmbFormaPagamento"
+                    x:Name="cmbBanco"
                     Grid.ColumnSpan="3" Grid.Row="2"
-                    materialDesign:HintAssist.Hint="Forma de Pagamento" 
+                    materialDesign:HintAssist.Hint="Banco" 
+                    Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
+                    FontFamily="Champagne &amp; Limousines" 
+                    FontSize="18"
+                    Foreground="#FF1F3D68" 
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Stretch"
+                    Margin="20 0 20 0" TabIndex="2"/>
+                <ComboBox 
+                    x:Name="cmbSituacaoCofre"
+                    Grid.ColumnSpan="3" Grid.Row="3"
+                    materialDesign:HintAssist.Hint="Situação" 
                     Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
                     FontFamily="Champagne &amp; Limousines" 
                     FontSize="18"
