--- a/CFP.App/Formularios/Financeiros/UserControlCofre.xaml
+++ b/CFP.App/Formularios/Financeiros/UserControlCofre.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:CFP.App.Formularios.Financeiros"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
-             d:DesignHeight="550" d:DesignWidth="1020">
+             d:DesignHeight="550" d:DesignWidth="1020" Loaded="UserControl_Loaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="70"/>
@@ -40,7 +40,7 @@
                     VerticalAlignment="Center"
                     Background="#FF1F3D68" 
                     BorderBrush="#FF1F3D68"
-                    ToolTip="Adicionar Registro" >
+                    ToolTip="Adicionar Registro" Click="btAdicionar_Click" >
                 <materialDesign:PackIcon 
                     Kind="Add"  
                     Width="50" 
@@ -54,7 +54,7 @@
                     VerticalAlignment="Center"
                     Background="#FF1F3D68" 
                     BorderBrush="#FF1F3D68"
-                    ToolTip="Cancelar Registro" >
+                    ToolTip="Cancelar Registro" Click="btCancelar_Click" >
                 <materialDesign:PackIcon 
                     Kind="Cancel"  
                     Width="50" 
@@ -65,10 +65,10 @@
                     Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
                     Height="60" Width="60" 
                     HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
+                    VerticalAlignment="Bottom"
                     Background="#FF1F3D68" 
                     BorderBrush="#FF1F3D68"
-                    ToolTip="Botão para sair da tela">
+                    ToolTip="Botão para sair da tela" Margin="1,0,2,5" Click="btSair_Click">
                 <materialDesign:PackIcon 
                     Kind="ExitToApp"  
                     Width="50" 
@@ -87,7 +87,7 @@
                            AutoGenerateColumns="False"                                        
                            Background="white" IsReadOnly="True">
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Situação" Binding="{Binding Situcao}" />
+                        <DataGridTextColumn Header="Situação" Binding="{Binding Situacao}" />
                         <DataGridTextColumn Header="Código" Binding="{Binding Codigo}" />
                         <DataGridTextColumn Header="Descrição" Binding="{Binding Nome}" />
                         <DataGridTextColumn Header="Banco" Binding="{Binding Banco}" />
@@ -97,7 +97,7 @@
                     </DataGrid.Columns>
                 </DataGrid>
             </Grid>
-            
+
         </Grid>
     </Grid>
 </UserControl>
