--- a/CFP.App/Formularios/Financeiros/UserControlCaixa.xaml
+++ b/CFP.App/Formularios/Financeiros/UserControlCaixa.xaml
@@ -305,7 +305,7 @@
                             <RowDefinition Height="380"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <DataGrid x:Name="DataGridAReceber" Grid.Row="0" AutoGenerateColumns="False">
+                        <DataGrid x:Name="DataGridAReceber" Grid.Row="0" AutoGenerateColumns="False" IsReadOnly="True">
                             <DataGrid.Columns>
                                 <DataGridTextColumn Header="Valor" Binding="{Binding ValorParcela, StringFormat='#,##0.00',  ConverterCulture='pt-BR'}" />
                                 <DataGridTextColumn Header="Pessoa" Binding="{Binding Conta.Pessoa}" />
