--- a/CFP.App/Formularios/Financeiros/TelasConfirmacoes/ValoresCofre.xaml
+++ b/CFP.App/Formularios/Financeiros/TelasConfirmacoes/ValoresCofre.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         ResizeMode="NoResize"
         Title="ValoresCofre" 
-        Height="250" Width="400" 
+        Height="300" Width="400" 
         WindowStartupLocation="CenterScreen"
         WindowStyle="None" Loaded="Window_Loaded">
     <Grid >
@@ -31,6 +31,7 @@
                     <RowDefinition/>
                     <RowDefinition/>
                     <RowDefinition/>
+                    <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="220"/>
@@ -47,7 +48,7 @@
                   Foreground="#FF1F3D68"
                   VerticalAlignment="Center" 
                   HorizontalAlignment="Stretch" 
-                  Margin="20 0 20 0" TabIndex="0" LostFocus="txtValor_LostFocus"/>
+                  Margin="20 0 20 0" TabIndex="0" LostFocus="txtValor_LostFocus" PreviewTextInput="txtValor_PreviewTextInput" PreviewKeyDown="txtValor_PreviewKeyDown"/>
 
                 <Button x:Name="btConfirmar"
                     Grid.Column="1"
@@ -97,9 +98,9 @@
                     HorizontalAlignment="Stretch"
                     Margin="20 0 20 0" TabIndex="2"/>
                 <ComboBox 
-                    x:Name="cmbSituacaoCofre"
+                    x:Name="cmbTransacaoBancaria"
                     Grid.ColumnSpan="3" Grid.Row="3"
-                    materialDesign:HintAssist.Hint="Situação" 
+                    materialDesign:HintAssist.Hint="Tipo Transação" 
                     Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
                     FontFamily="Champagne &amp; Limousines" 
                     FontSize="18"
@@ -107,6 +108,18 @@
                     VerticalAlignment="Center"
                     HorizontalAlignment="Stretch"
                     Margin="20 0 20 0" TabIndex="2"/>
+                <ComboBox 
+                    x:Name="cmbSituacao"
+                    Grid.ColumnSpan="3" Grid.Row="4"
+                    materialDesign:HintAssist.Hint="Situação do Cofre" 
+                    Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
+                    FontFamily="Champagne &amp; Limousines" 
+                    FontSize="18"
+                    Foreground="#FF1F3D68" 
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Stretch"
+                    Margin="20 0 20 0" TabIndex="2"
+                    ToolTip="Essa Situacao é referente ao cofre, se for Entrada quando vier do Caixa, voce esta retirando do caixa e se for saída vc esta acrescentando no caixa"/>
             </Grid>
         </Border>
     </Grid>
