Interfaces de Hora Extra e consulta de Contas iniciadas;

--- a/CFP.App/Formularios/ModeloBase/UserControls/UserControlFinanceiros.xaml
+++ b/CFP.App/Formularios/ModeloBase/UserControls/UserControlFinanceiros.xaml
@@ -101,7 +101,7 @@
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Stretch" 
                     ToolTip="Cadastro de Hora Extra"
-                    Margin="10 0 10 0">
+                    Margin="10 0 10 0" Click="btHorasTrabalho_Click">
                 <materialDesign:PackIcon
                     Kind="PointOfSale"
                     Width="70"
