--- a/CFP.App/Formularios/ModeloBase/UserControls/UserControlConsultas.xaml
+++ b/CFP.App/Formularios/ModeloBase/UserControls/UserControlConsultas.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CFP.App.Formularios.ModeloBase.UserControls.UserControlRelatorios"
+﻿<UserControl x:Class="CFP.App.Formularios.ModeloBase.UserControls.UserControlConsultas"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -242,7 +242,7 @@
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Stretch" 
                     ToolTip="Relatórios de Bancos"
-                    Margin="10 0 10 0">
+                    Margin="10 0 10 0" Click="BtRelConta_Click">
                 <materialDesign:PackIcon
                     Kind="AccountCash"
                     Width="70"
